# trading

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  alembic.ini  config.example.yaml  config.yaml  docker-compose.yml  messages.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_options_trades_and_snapshots.py
dashboard-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
dashboard-ui/src/: App.tsx  main.tsx  mockData.ts  types.ts
data/: trades_2024-01-01_2024-01-31.csv  trades_2026-04-08_2026-05-08.csv
ibkr_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: backtest.py  rebalance.py  start.sh
src/: __init__.py  main.py
src/alerts/: __init__.py  service.py
src/backtesting/: __init__.py  engine.py  simulator.py  walk_forward.py
src/config/: __init__.py  settings.py  watcher.py
src/connection/: __init__.py  manager.py
src/dashboard/: __init__.py  api.py  websocket.py
src/data/: __init__.py  bar_builder.py  historical.py  market_data_hub.py  options_chain.py
src/orders/: __init__.py  manager.py  options_contract.py  rate_limiter.py
src/persistence/: __init__.py  database.py  models.py  reconciliation.py  state.py
src/portfolio/: __init__.py  capital_allocator.py  monitor.py  pnl_tracker.py
src/risk/: __init__.py  manager.py  stops.py  var.py
src/strategies/: __init__.py  base.py  engine.py  signals.py  wheel.py
src/utils/: __init__.py  logging.py  market_hours.py
tests/: conftest.py
tests/integration/: test_api.py  test_database.py  test_order_flow.py
tests/property/: __init__.py  test_capital_properties.py  test_order_properties.py  test_portfolio_properties.py  (+2 more)
(+78 files in other folders)
