[project]
name = "ibkr-trading-bot"
version = "0.1.0"
description = "Automated trading bot connecting to Interactive Brokers via TWS/IB Gateway"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "ib-async>=1.0.3",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "httpx>=0.28.1",
    "aiosmtplib>=3.0.2",
    "watchfiles>=1.0.3",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "hypothesis>=6.119.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
]
test = [
    "hypothesis>=6.119.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
trading-bot = "src.main:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# IBKR API protocol methods must match ib_async camelCase naming
"src/data/options_chain.py" = ["N802", "N803"]
# Strategy implementations use short aliases and IBKR naming
"src/strategies/implementations/*.py" = ["N817"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
